[workspace]
members = ["comically", "comically-tui", "comically-cli"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
imageproc = "0.25"
log = "0.4"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
tracing = "0.1.41"
tracing-error = "0.2.1"
uuid = { version = "1.8", features = ["v4"] }
walkdir = "2.4"
webp = "0.3"
zip = "4.2"
unrar = "0.5.8"

[profile.release]
incremental = true
