[package]
name = "comically"
authors = ["nico burniske"]
version = "0.1.5"
edition = "2021"
description = "comically fast manga & comic optimizer for e-readers - core library"
keywords = ["manga", "comic", "kindle", "epub", "ebook"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/nicoburniske/comically"

[dependencies]
anyhow = { workspace = true }
imageproc = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
webp = { workspace = true }
zip = { workspace = true }
unrar = { workspace = true }
